# openai-usage-example

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/: README.md
src/app/: __main__.py
src/notebooks/: Example.ipynb
src/scripts/: example_env.py  example_xyz.py
