[tool.poetry]
name = "python-repository-template"
version = "0.2.0"
description = "A Python repository template."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9.13"

[tool.poetry.group.dev.dependencies]
notebook = "^7.1.2"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
